Fix vertical alignment for small style

--- a/small.css
+++ b/small.css
@@ -18,10 +18,10 @@ body {
 #profile {
   position: fixed;
   width: 280px;
-  height: 416px;
+  height: 454px;
   top: 50%;
   left: 50%;
-  margin: -208px 0 0 -140px;
+  margin: -227px 0 0 -140px;
 }
 
 #profilepic {
